--- a/pages/DetailsOfCar.html
+++ b/pages/DetailsOfCar.html
@@ -15,28 +15,15 @@
     .autohub-title {
       font-family: 'Exo 2', sans-serif;
     }
-    .fade-slide-up {
-      animation: fadeSlideUp 0.4s ease-out forwards;
-    }
-    @keyframes fadeSlideUp {
-      0% {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
   </style>
 </head>
 
 <body class="font-sans relative">
 
   <!-- Main Content -->
-  <div class="bg-white relative" style="width: 430px; height: 700px;">
+  <div class="bg-white relative z-10" style="width: 430px; height: 700px;">
     
-    <!-- Menu, Profile, Search Icons -->
+    <!-- Menu Icons -->
     <div class="flex items-center justify-between px-4 pt-4">
       <div class="w-6 h-6">
         <svg class="w-full h-full text-[#555]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -67,44 +54,71 @@
       <h2 class="text-gray-700 text-xl font-semibold tracking-wide autohub-title">KIA SORENTO</h2>
     </div>
 
-    <!-- Car Details (NEW Tailwind version) -->
-    <div class="grid grid-cols-2 gap-4 px-8 mt-6">
-      <div class="w-[69px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Engine<br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">D-4S</span>
+    <!-- Car Details -->
+    <div class="grid grid-cols-2 gap-6 px-8 mt-6 text-center">
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Engine</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">D-CVVT</p>
       </div>
-
-      <div class="w-[177px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Transmission<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">Automatic OR Manual</span>
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Transmission</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">6-Speed Automatic</p>
       </div>
-
-      <div class="w-[44px] h-[35px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Year<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">2025</span>
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Year</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">2025</p>
       </div>
-
-      <div class="w-[86px] h-[53px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Fuel Type<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">Petrol</span>
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Fuel Type</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">Petrol</p>
       </div>
-
-      <div class="w-[173px] h-[70px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Color<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">Crystal White Pearl (K1X)</span>
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Color</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">Mineral Blue</p>
       </div>
-
-      <div class="w-[92px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">No. of Seats<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">5 Seaters</span>
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">No. of Seats</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">7 Seater</p>
       </div>
+      <div class="col-span-2">
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Body Type</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">SUV</p>
+      </div>
+    </div>
 
-      <div class="w-[105px] h-[53px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Body Type<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">SUV</span>
+    <!-- Footer -->
+    <div class="flex justify-between items-center px-8 mt-6 text-[#7F7F7F]">
+      <button onclick="toggleModal()" class="flex items-center gap-1 text-sm">
+        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+        </svg>
+        Add Notes
+      </button>
+      <button class="flex items-center gap-1 text-sm">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v16h16V4H4z" />
+        </svg>
+        <button class="share-button" onclick="window.location.href='Share.html'">Share</button>
+      
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div id="noteModal" class="fixed inset-0 flex items-center justify-center bg-black/40 backdrop-blur-sm z-50 hidden">
+    <div class="bg-white rounded-lg shadow-lg p-4 w-80">
+      <textarea placeholder="Add a note..." class="w-full h-40 p-2 border rounded-md resize-none focus:outline-none focus:ring-2 focus:ring-blue-400 text-sm"></textarea>
+      <div class="flex justify-end gap-2 mt-2 text-sm">
+        <button onclick="toggleModal()" class="px-3 py-1 rounded hover:underline">Cancel</button>
+        <button class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600">Save</button>
       </div>
     </div>
   </div>
+
+  <script>
+    function toggleModal() {
+      const modal = document.getElementById('noteModal');
+      modal.classList.toggle('hidden');
+    }
+  </script>
 
 </body>
 </html>
