--- a/pages/Share.html
+++ b/pages/Share.html
@@ -67,41 +67,35 @@
       <h2 class="text-gray-700 text-xl font-semibold tracking-wide autohub-title">KIA SORENTO</h2>
     </div>
 
-    <!-- Car Details (NEW Tailwind version) -->
-    <div class="grid grid-cols-2 gap-4 px-8 mt-6">
-      <div class="w-[69px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Engine<br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">D-4S</span>
+     <!-- Car Details -->
+     <div class="grid grid-cols-2 gap-6 px-8 mt-6 text-center">
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Engine</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">D-CVVT</p>
       </div>
-
-      <div class="w-[177px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Transmission<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">Automatic OR Manual</span>
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Transmission</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">6-Speed Automatic</p>
       </div>
-
-      <div class="w-[44px] h-[35px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Year<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">2025</span>
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Year</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">2025</p>
       </div>
-
-      <div class="w-[86px] h-[53px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Fuel Type<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">Petrol</span>
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Fuel Type</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">Petrol</p>
       </div>
-
-      <div class="w-[173px] h-[70px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Color<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">Crystal White Pearl (K1X)</span>
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Color</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">Mineral Blue</p>
       </div>
-
-      <div class="w-[92px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">No. of Seats<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">5 Seaters</span>
+      <div>
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">No. of Seats</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">7 Seater</p>
       </div>
-
-      <div class="w-[105px] h-[53px] flex flex-col justify-center text-center">
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-normal break-words">Body Type<br/><br/></span>
-        <span class="text-[#7F7F7F] text-[15px] font-montserrat font-bold break-words">SUV</span>
+      <div class="col-span-2">
+        <p class="text-[#7F7F7F] text-[15px] font-montserrat">Body Type</p>
+        <p class="text-[#7F7F7F] text-[15px] font-bold">SUV</p>
       </div>
     </div>
 
