--- a/pages/Share.html
+++ b/pages/Share.html
@@ -109,12 +109,13 @@
         
         <!-- Copy Link Button -->
         <div class="flex flex-col items-center">
-          <div class="bg-gray-300 p-4 rounded-full">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 13a5 5 0 1 0 7.416-4.4l-1.417 1.416a3 3 0 1 1-4.243 4.243l-1.415-1.415A5 5 0 0 0 10 13zm4-7h4v4m-1.586-2.586L8 17.414" />
+          <button class="flex flex-col items-center justify-center w-20 h-20 bg-gray-100 rounded-full hover:bg-gray-200 transition">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-black mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <!-- Example Link Icon -->
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-1.414 1.414a4 4 0 105.656 5.656l1.414-1.414M10.172 13.828a4 4 0 005.656 0l1.414-1.414a4 4 0 00-5.656-5.656l-1.414 1.414" />
             </svg>
-          </div>
-          <p class="mt-2 text-xs text-black" style="font-family: 'Montserrat', sans-serif;">Copy Link</p>
+            <span class="text-sm text-gray-700">Copy Link</span>
+          </button>
         </div>
 
         <!-- Add to Favorite Button -->
