--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -48,10 +48,10 @@
   <div class="bg-white text-center py-4">
     <p class="text-sm" style="font-family: 'Montserrat', sans-serif;">fahmihafizul@gmail.com</p>
     <div class="text-center mt-">
-        <div style="width: 100%; height: 100%; outline: 1px #999999 solid; outline-offset: 0.50px"></div>
       <svg class="w-6 h-6 mx-auto text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 0 1 6.364 0L12 7.636l1.318-1.318a4.5 4.5 0 1 1 6.364 6.364L12 21.364l-7.682-7.682a4.5 4.5 0 0 1 0-6.364z" />
       </svg>
+      <div class="mt-2" style="width: 100%; height: 1px; background-color: #999999;"></div>
     </div>
   </div>
 
