--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -31,7 +31,8 @@
     </div>
 
     <!-- Title Centered -->
-    <h1 class="absolute left-1/2 transform -translate-x-1/2 text-white text-base font-semibold autohub-title">
+    <h1 class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white text-base font-semibold autohub-title">
+
       AutoHub
     </h1>
 
