--- a/pages/MPV.html
+++ b/pages/MPV.html
@@ -1,75 +1,73 @@
-<html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   SUV
-  </title>
-  <script src="https://cdn.tailwindcss.com">
-  </script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <style>
-   .border-1-5 {
-    border-width: 1.5pt;
-   }
-  </style>
- </head>
- <body class="bg-gray-200">
-  <div class="max-w-md mx-auto bg-white shadow-lg">
-   <div class="flex justify-between items-center p-4">
-    <i class="fas fa-bars text-xl">
-    </i>
-    <div class="flex space-x-4">
-     <i class="fas fa-user text-xl">
-     </i>
-     <i class="fas fa-search text-xl">
-     </i>
+<div data-layer="MPV" class="Mpv" style="width: 430px; height: 932px; position: relative; background: white; overflow: hidden">
+    <div data-layer="Rectangle 12" class="Rectangle12" style="width: 379px; height: 210px; left: 28px; top: 649px; position: absolute; background: #D9D9D9; border-radius: 10px; border: 2px black solid"></div>
+    <div data-layer="Rectangle 13" class="Rectangle13" style="width: 379px; height: 210px; left: 28px; top: 413px; position: absolute; background: #D9D9D9; border-radius: 10px; border: 2px black solid"></div>
+    <div data-layer="Rectangle 14" class="Rectangle14" style="width: 379px; height: 210px; left: 28px; top: 177px; position: absolute; background: #D9D9D9; border-radius: 10px; border: 2px black solid"></div>
+    <div data-layer="More Details" class="MoreDetails" style="width: 78px; height: 34px; left: 306px; top: 816px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #007FFE; font-size: 12px; font-family: Exo 2; font-weight: 400; word-wrap: break-word">More Details</div>
+    <div data-layer="About" class="About" style="left: 67px; top: 875px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 15px; font-family: Montserrat; font-weight: 400; word-wrap: break-word">About</div>
+    <div data-svg-wrapper data-layer="arrow_back" class="ArrowBack" style="left: 38px; top: 29px; position: absolute">
+      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M9.78125 16.25L16.7812 23.25L15 25L5 15L15 5L16.7812 6.75L9.78125 13.75H25V16.25H9.78125Z" fill="white"/>
+      </svg>
     </div>
-   </div>
-   <div class="flex justify-between items-center p-4">
-    <i class="fas fa-chevron-left text-2xl">
-    </i>
-    <h2 class="text-2xl font-semibold">
-     SUV
-    </h2>
-    <i class="fas fa-chevron-right text-2xl">
-    </i>
-   </div>
-   <div class="p-4 space-y-4">
-    <div class="border-1-5 border-black rounded-lg p-4 bg-gray-100">
-     <img alt="Hyundai Kona N Line" class="w-full h-48 object-cover" height="200" src="https://storage.googleapis.com/a1aa/image/rt2B-gTSEOGV2PjpEZwSn5Ze72Nx9S6nVB_o_qmD-NM.jpg" width="300"/>
-     <div class="flex justify-between items-center mt-2">
-      <h3 class="text-lg font-semibold text-center w-full">
-       Hyundai Kona N Line
-      </h3>
-      <a class="text-blue-500" href="#">
-       More Details
-      </a>
-     </div>
+    <div data-layer="Rectangle 12" class="Rectangle12" style="width: 379px; height: 210px; left: 28px; top: 885px; position: absolute; background: #D9D9D9; border-radius: 10px; border: 2px black solid"></div>
+    <div data-layer="Mazda MX-5" class="MazdaMx5" style="width: 151px; height: 21px; left: 139px; top: 1058px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 12px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">Mazda MX-5</div>
+    <div data-layer="More Details" class="MoreDetails" style="width: 78px; height: 34px; left: 306px; top: 1052px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #007FFE; font-size: 12px; font-family: Exo 2; font-weight: 400; word-wrap: break-word">More Details</div>
+    <img data-layer="Toyota Alphard" class="ToyotaAlphard" style="width: 331px; height: 168px; left: 45px; top: 662px; position: absolute; border-radius: 10px" src="https://i.ibb.co/9H7GmNqP/Toyota-Alphard.png" />
+    <div data-layer="Toyota Alphard" class="ToyotaAlphard" style="width: 161px; height: 21px; left: 137px; top: 835px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 12px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">Toyota Alphard</div>
+    <img data-layer="Hyundai H1" class="HyundaiH1" style="width: 278px; height: 156px; left: 67px; top: 423px; position: absolute; border-radius: 10px" src="https://i.ibb.co/9HyB2ZkX/Hyundai-H1.png" />
+    <div data-layer="More Details" class="MoreDetails" style="width: 78px; height: 34px; left: 306px; top: 579px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #007FFE; font-size: 12px; font-family: Exo 2; font-weight: 400; word-wrap: break-word">More Details</div>
+    <div data-layer="Hyundai H1" class="HyundaiH1" style="width: 151px; height: 21px; left: 139px; top: 586px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 12px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">Hyundai H1</div>
+    <img data-layer="Kia Carnival pic" class="KiaCarnivalPic" style="width: 288px; height: 164px; left: 71px; top: 188px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 10px" src="https://i.ibb.co/Lhn52s6p/Kia-Carnival-pic.png" />
+    <div data-layer="More Details" class="MoreDetails" style="width: 78px; height: 34px; left: 316px; top: 345px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #007FFE; font-size: 12px; font-family: Exo 2; font-weight: 400; word-wrap: break-word">More Details</div>
+    <div data-layer="Kia Carnival" class="KiaCarnival" style="width: 151px; height: 21px; left: 140px; top: 352px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 12px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">Kia Carnival</div>
+    <div data-svg-wrapper data-layer="search" class="Search" style="left: 365px; top: 29px; position: absolute">
+      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M24.5 26.25L16.625 18.375C16 18.875 15.2812 19.2708 14.4688 19.5625C13.6562 19.8542 12.7917 20 11.875 20C9.60417 20 7.68229 19.2135 6.10938 17.6406C4.53646 16.0677 3.75 14.1458 3.75 11.875C3.75 9.60417 4.53646 7.68229 6.10938 6.10938C7.68229 4.53646 9.60417 3.75 11.875 3.75C14.1458 3.75 16.0677 4.53646 17.6406 6.10938C19.2135 7.68229 20 9.60417 20 11.875C20 12.7917 19.8542 13.6562 19.5625 14.4688C19.2708 15.2812 18.875 16 18.375 16.625L26.25 24.5L24.5 26.25ZM11.875 17.5C13.4375 17.5 14.7656 16.9531 15.8594 15.8594C16.9531 14.7656 17.5 13.4375 17.5 11.875C17.5 10.3125 16.9531 8.98438 15.8594 7.89062C14.7656 6.79688 13.4375 6.25 11.875 6.25C10.3125 6.25 8.98438 6.79688 7.89062 7.89062C6.79688 8.98438 6.25 10.3125 6.25 11.875C6.25 13.4375 6.79688 14.7656 7.89062 15.8594C8.98438 16.9531 10.3125 17.5 11.875 17.5Z" fill="var(--Schemes-On-Surface, #1D1B20)"/>
+      </svg>
     </div>
-    <div class="border-1-5 border-black rounded-lg p-4 bg-gray-100">
-     <img alt="Honda HR-V" class="w-full h-48 object-cover" height="200" src="https://storage.googleapis.com/a1aa/image/deFbT9HKax_dgHw3llsgJgCjJ2Drcr2clWi9Q-qWUf4.jpg" width="300"/>
-     <div class="flex justify-between items-center mt-2">
-      <h3 class="text-lg font-semibold text-center w-full">
-       Honda HR-V
-      </h3>
-      <a class="text-blue-500" href="#">
-       More Details
-      </a>
-     </div>
+    <div data-svg-wrapper data-layer="image 27" class="Image27" style="left: 326px; top: 29px; position: absolute">
+      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <rect width="30" height="30" fill="url(#pattern0_832_1527)"/>
+      <defs>
+      <pattern id="pattern0_832_1527" patternContentUnits="objectBoundingBox" width="1" height="1">
+      <use xlink:href="#image0_832_1527" transform="scale(0.00125)"/>
+      </pattern>
+      <image id="image0_832_1527" width="800" height="800" preserveAspectRatio="none" xlink:href="https://i.ibb.co/kg5vwV0x/image-27-1.png"/>
+      </defs>
+      </svg>
     </div>
-    <div class="border-1-5 border-black rounded-lg p-4 bg-gray-100">
-     <img alt="Land Rover Defender 90" class="w-full h-48 object-cover" height="200" src="https://storage.googleapis.com/a1aa/image/QnOnkHbQEbi6oGIBA9rO86tScKDgLMRB4-IUhgRQfJQ.jpg" width="300"/>
-     <div class="flex justify-between items-center mt-2">
-      <h3 class="text-lg font-semibold text-center w-full">
-       Land Rover Defender 90
-      </h3>
-      <a class="text-blue-500" href="#">
-       More Details
-      </a>
-     </div>
+    <div data-svg-wrapper data-layer="menu" class="Menu" style="left: 36px; top: 29px; position: absolute">
+      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M3.75 22.5V20H26.25V22.5H3.75ZM3.75 16.25V13.75H26.25V16.25H3.75ZM3.75 10V7.5H26.25V10H3.75Z" fill="var(--Schemes-On-Surface, #1D1B20)"/>
+      </svg>
     </div>
-   </div>
+    <div data-layer="MPV" class="Mpv" style="width: 417px; height: 34px; left: 6px; top: 111px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: var(--TEXT-ON-SPECS-ETC, #7F7F7F); font-size: 30px; font-family: Montserrat; font-weight: 600; word-wrap: break-word">   MPV   </div>
+    <div data-layer="--" style="width: 250px; height: 149px; left: 90px; top: 673px; position: absolute"></div>
+    <div data-layer="Rectangle 37" class="Rectangle37" style="width: 318px; height: 364px; left: 59px; top: 325px; position: absolute"></div>
+    <div data-svg-wrapper data-layer="ri-arrow-left-s-fill" class="RiArrowLeftSFill" style="left: 149px; top: 115px; position: absolute">
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g clip-path="url(#clip0_832_1532)">
+      <circle cx="12" cy="12" r="12" fill="#D9D9D9"/>
+      <path d="M8 12L14 6V18L8 12Z" fill="black"/>
+      </g>
+      <defs>
+      <clipPath id="clip0_832_1532">
+      <rect width="24" height="24" fill="white"/>
+      </clipPath>
+      </defs>
+      </svg>
+    </div>
+    <div data-svg-wrapper data-layer="ri-arrow-left-s-fill" class="RiArrowLeftSFill" style="left: 277px; top: 115px; position: absolute">
+      <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g clip-path="url(#clip0_832_1537)">
+      <circle cx="12.0483" cy="12.0485" r="12" transform="rotate(179.769 12.0483 12.0485)" fill="#D9D9D9"/>
+      <path d="M16.0485 12.0323L10.0728 18.0564L10.0244 6.05655L16.0485 12.0323Z" fill="black"/>
+      </g>
+      <defs>
+      <clipPath id="clip0_832_1537">
+      <rect width="24" height="24" fill="white" transform="translate(24.0967 24) rotate(179.769)"/>
+      </clipPath>
+      </defs>
+      </svg>
+    </div>
   </div>
- </body>
-</html>
