--- a/pages/DetailsCarsLuxury.html
+++ b/pages/DetailsCarsLuxury.html
@@ -101,7 +101,7 @@
 
       <!-- Slide 3: Audi R8 -->
       <div class="min-w-full flex flex-col items-center mt-20">
-        <img src="https://i.ibb.co/Lh6NxP0r/BRZ-Coupe-removebg-preview.png" alt="Audi R8" class="w-64">
+        <img src="https://i.ibb.co/jPcGFbtq/image.png" alt="Audi R8" class="w-64">
         <h1 class="text-2xl mt-4 text-gray-800 font-medium">Audi R8</h1>
         <div class="grid grid-cols-2 gap-y-6 px-6 py-8 text-center text-gray-600 font-light text-sm">
           <div><p class="text-xs">Engine</p><p class="font-semibold">D-4S</p></div>
