added the automatic changes in profile

--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -47,7 +47,17 @@
 
   <!-- Email + Heart -->
   <div class="bg-white text-center py-4">
-    <p class="text-sm" style="font-family: 'Montserrat', sans-serif;">fahmihafizul@gmail.com</p>
+    <p id="userEmail" class="text-sm" style="font-family: 'Montserrat', sans-serif;"></p>
+
+<script>
+  const email = localStorage.getItem('userEmail');
+  if (email) {
+    document.getElementById('userEmail').textContent = email;
+  } else {
+    document.getElementById('userEmail').textContent = "Not logged in";
+  }
+</script>
+
     <div class="text-center mt-">
       <svg class="w-6 h-6 mx-auto text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 0 1 6.364 0L12 7.636l1.318-1.318a4.5 4.5 0 1 1 6.364 6.364L12 21.364l-7.682-7.682a4.5 4.5 0 0 1 0-6.364z" />
