--- a/pages/Share.html
+++ b/pages/Share.html
@@ -15,18 +15,51 @@
     .autohub-title {
       font-family: 'Exo 2', sans-serif;
     }
-    .fade-slide-up {
-      animation: fadeSlideUp 0.4s ease-out forwards;
+
+    /* Notification Style (Rectangular Box) */
+    .notification {
+      background-color: #ffffff; /* White background */
+      color: #4b5563; /* Text color */
+      padding: 12px 20px;
+      border-radius: 8px;
+      position: absolute;
+      bottom: 180px; /* Adjusted position further up */
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+      width: 85%; /* Adjust width */
+      opacity: 0;
+      transition: opacity 0.5s ease-out;
+      z-index: 1000;
     }
-    @keyframes fadeSlideUp {
-      0% {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
+
+    .notification svg {
+      height: 20px;
+      width: 20px;
+      color: #34D399; /* Green checkmark color */
+    }
+
+    /* Notification Text */
+    .notification-text {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 16px;
+      font-weight: 600;
+    }
+
+    /* Close Button (X) Style */
+    .close-btn {
+      background: transparent;
+      border: none;
+      color: #6B7280;
+      font-size: 20px;
+      cursor: pointer;
+      position: absolute;
+      top: 0;
+      right: 0;
+      margin: 10px;
     }
   </style>
 </head>
@@ -35,7 +68,6 @@
 
   <!-- Main Content -->
   <div class="bg-white relative" style="width: 430px; height: 700px;">
-    
     <!-- Menu, Profile, Search Icons -->
     <div class="flex items-center justify-between px-4 pt-4">
       <div class="w-6 h-6">
@@ -67,8 +99,8 @@
       <h2 class="text-gray-700 text-xl font-semibold tracking-wide autohub-title">KIA SORENTO</h2>
     </div>
 
-     <!-- Car Details -->
-     <div class="grid grid-cols-2 gap-6 px-8 mt-6 text-center">
+    <!-- Car Details -->
+    <div class="grid grid-cols-2 gap-6 px-8 mt-6 text-center">
       <div>
         <p class="text-[#7F7F7F] text-[15px] font-montserrat">Engine</p>
         <p class="text-[#7F7F7F] text-[15px] font-bold">D-CVVT</p>
@@ -106,19 +138,18 @@
     <div class="absolute bottom-0 left-0 w-full bg-white p-6 rounded-t-2xl z-30 fade-slide-up">
       <div class="text-center mb-4 font-semibold text-black" style="font-family: 'Raleway', sans-serif;">Send to</div>
       <div class="flex justify-center gap-10">
-        
         <!-- Copy Link Button -->
         <div class="flex flex-col items-center">
           <div class="bg-gray-300 p-4 rounded-full">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-1.414 1.414a4 4 0 105.656 5.656l1.414-1.414M10.172 13.828a4 4 0 005.656 0l1.414-1.414a4 4 0 00-5.656-5.656l-1.414 1.414" />
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-1.414 1.414a4 4 0 105.656 5.656l1.414-1.414M10.172 13.828a4 4 0 005.656 0l1.414-1.414a4 4 0 00-5.656-5.656l-1.414 1.414" />
             </svg>
           </div>
           <p class="mt-2 text-xs text-black" style="font-family: 'Montserrat', sans-serif;">Copy Link</p>
         </div>
         <!-- Add to Favorite Button -->
         <div class="flex flex-col items-center">
-          <div class="bg-gray-300 p-4 rounded-full">
+          <div id="favorite-btn" class="bg-gray-300 p-4 rounded-full cursor-pointer">
             <svg class="h-6 w-6 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 0 1 6.364 0L12 7.636l1.318-1.318a4.5 4.5 0 1 1 6.364 6.364L12 21.364l-7.682-7.682a4.5 4.5 0 0 1 0-6.364z" />
             </svg>
@@ -126,18 +157,59 @@
           <p class="mt-2 text-xs text-black" style="font-family: 'Montserrat', sans-serif;">Add to favorite</p>
         </div>
       </div>
-
-      <!-- Close Button -->
-      <div class="absolute top-3 right-4">
-        <button>
-          <svg class="h-5 w-5 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-          </svg>
-        </button>
-      </div>
+      <!-- Close Button (X) Near "Send to" -->
+      <button class="close-btn" id="close-notification">X</button>
     </div>
-
   </div>
+
+  <!-- Notification (Rectangular) -->
+  <div class="notification hidden" id="favorite-notification">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 21l-4-4h3V3h2v14h3l-4 4z" />
+    </svg>
+    <span class="notification-text">Added to Favorites</span>
+  </div>
+
+  <script>
+    const carName = "KIA Sorento";  // This can be dynamically set based on the page content
+
+    // Handle the "Add to Favorite" button
+    document.getElementById('favorite-btn').addEventListener('click', function() {
+      // Show notification
+      const notification = document.getElementById('favorite-notification');
+      notification.classList.remove('hidden');
+      notification.style.opacity = 1; // Make notification visible
+
+      // Set timeout to hide the notification after 3 seconds
+      setTimeout(() => {
+        notification.style.opacity = 0;
+        setTimeout(() => {
+          notification.classList.add('hidden');
+        }, 500);
+      }, 3000);
+
+      // Get existing favorites from localStorage
+      let favorites = JSON.parse(localStorage.getItem('favorites')) || [];
+
+      // Add the new car to favorites
+      favorites.push(carName);
+
+      // Save updated favorites back to localStorage
+      localStorage.setItem('favorites', JSON.stringify(favorites));
+    });
+
+    // Close the notification and go to the car details page when X is clicked
+    document.getElementById('close-notification').addEventListener('click', function() {
+      const notification = document.getElementById('favorite-notification');
+      notification.style.opacity = 0;
+      setTimeout(() => {
+        notification.classList.add('hidden');
+      }, 500);
+
+      // Redirect to the car details page
+      window.location.href = 'DetailsOfCar.html';
+    });
+  </script>
 
 </body>
 </html>
