Update MPV latest version.html

--- a/pages/MPV.html
+++ b/pages/MPV.html
@@ -1,73 +1,134 @@
-<div data-layer="MPV" class="Mpv" style="width: 430px; height: 932px; position: relative; background: white; overflow: hidden">
-    <div data-layer="Rectangle 12" class="Rectangle12" style="width: 379px; height: 210px; left: 28px; top: 649px; position: absolute; background: #D9D9D9; border-radius: 10px; border: 2px black solid"></div>
-    <div data-layer="Rectangle 13" class="Rectangle13" style="width: 379px; height: 210px; left: 28px; top: 413px; position: absolute; background: #D9D9D9; border-radius: 10px; border: 2px black solid"></div>
-    <div data-layer="Rectangle 14" class="Rectangle14" style="width: 379px; height: 210px; left: 28px; top: 177px; position: absolute; background: #D9D9D9; border-radius: 10px; border: 2px black solid"></div>
-    <div data-layer="More Details" class="MoreDetails" style="width: 78px; height: 34px; left: 306px; top: 816px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #007FFE; font-size: 12px; font-family: Exo 2; font-weight: 400; word-wrap: break-word">More Details</div>
-    <div data-layer="About" class="About" style="left: 67px; top: 875px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 15px; font-family: Montserrat; font-weight: 400; word-wrap: break-word">About</div>
-    <div data-svg-wrapper data-layer="arrow_back" class="ArrowBack" style="left: 38px; top: 29px; position: absolute">
-      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M9.78125 16.25L16.7812 23.25L15 25L5 15L15 5L16.7812 6.75L9.78125 13.75H25V16.25H9.78125Z" fill="white"/>
-      </svg>
-    </div>
-    <div data-layer="Rectangle 12" class="Rectangle12" style="width: 379px; height: 210px; left: 28px; top: 885px; position: absolute; background: #D9D9D9; border-radius: 10px; border: 2px black solid"></div>
-    <div data-layer="Mazda MX-5" class="MazdaMx5" style="width: 151px; height: 21px; left: 139px; top: 1058px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 12px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">Mazda MX-5</div>
-    <div data-layer="More Details" class="MoreDetails" style="width: 78px; height: 34px; left: 306px; top: 1052px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #007FFE; font-size: 12px; font-family: Exo 2; font-weight: 400; word-wrap: break-word">More Details</div>
-    <img data-layer="Toyota Alphard" class="ToyotaAlphard" style="width: 331px; height: 168px; left: 45px; top: 662px; position: absolute; border-radius: 10px" src="https://i.ibb.co/9H7GmNqP/Toyota-Alphard.png" />
-    <div data-layer="Toyota Alphard" class="ToyotaAlphard" style="width: 161px; height: 21px; left: 137px; top: 835px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 12px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">Toyota Alphard</div>
-    <img data-layer="Hyundai H1" class="HyundaiH1" style="width: 278px; height: 156px; left: 67px; top: 423px; position: absolute; border-radius: 10px" src="https://i.ibb.co/9HyB2ZkX/Hyundai-H1.png" />
-    <div data-layer="More Details" class="MoreDetails" style="width: 78px; height: 34px; left: 306px; top: 579px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #007FFE; font-size: 12px; font-family: Exo 2; font-weight: 400; word-wrap: break-word">More Details</div>
-    <div data-layer="Hyundai H1" class="HyundaiH1" style="width: 151px; height: 21px; left: 139px; top: 586px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 12px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">Hyundai H1</div>
-    <img data-layer="Kia Carnival pic" class="KiaCarnivalPic" style="width: 288px; height: 164px; left: 71px; top: 188px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 10px" src="https://i.ibb.co/Lhn52s6p/Kia-Carnival-pic.png" />
-    <div data-layer="More Details" class="MoreDetails" style="width: 78px; height: 34px; left: 316px; top: 345px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #007FFE; font-size: 12px; font-family: Exo 2; font-weight: 400; word-wrap: break-word">More Details</div>
-    <div data-layer="Kia Carnival" class="KiaCarnival" style="width: 151px; height: 21px; left: 140px; top: 352px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 12px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">Kia Carnival</div>
-    <div data-svg-wrapper data-layer="search" class="Search" style="left: 365px; top: 29px; position: absolute">
-      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M24.5 26.25L16.625 18.375C16 18.875 15.2812 19.2708 14.4688 19.5625C13.6562 19.8542 12.7917 20 11.875 20C9.60417 20 7.68229 19.2135 6.10938 17.6406C4.53646 16.0677 3.75 14.1458 3.75 11.875C3.75 9.60417 4.53646 7.68229 6.10938 6.10938C7.68229 4.53646 9.60417 3.75 11.875 3.75C14.1458 3.75 16.0677 4.53646 17.6406 6.10938C19.2135 7.68229 20 9.60417 20 11.875C20 12.7917 19.8542 13.6562 19.5625 14.4688C19.2708 15.2812 18.875 16 18.375 16.625L26.25 24.5L24.5 26.25ZM11.875 17.5C13.4375 17.5 14.7656 16.9531 15.8594 15.8594C16.9531 14.7656 17.5 13.4375 17.5 11.875C17.5 10.3125 16.9531 8.98438 15.8594 7.89062C14.7656 6.79688 13.4375 6.25 11.875 6.25C10.3125 6.25 8.98438 6.79688 7.89062 7.89062C6.79688 8.98438 6.25 10.3125 6.25 11.875C6.25 13.4375 6.79688 14.7656 7.89062 15.8594C8.98438 16.9531 10.3125 17.5 11.875 17.5Z" fill="var(--Schemes-On-Surface, #1D1B20)"/>
-      </svg>
-    </div>
-    <div data-svg-wrapper data-layer="image 27" class="Image27" style="left: 326px; top: 29px; position: absolute">
-      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-      <rect width="30" height="30" fill="url(#pattern0_832_1527)"/>
-      <defs>
-      <pattern id="pattern0_832_1527" patternContentUnits="objectBoundingBox" width="1" height="1">
-      <use xlink:href="#image0_832_1527" transform="scale(0.00125)"/>
-      </pattern>
-      <image id="image0_832_1527" width="800" height="800" preserveAspectRatio="none" xlink:href="https://i.ibb.co/kg5vwV0x/image-27-1.png"/>
-      </defs>
-      </svg>
-    </div>
-    <div data-svg-wrapper data-layer="menu" class="Menu" style="left: 36px; top: 29px; position: absolute">
-      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M3.75 22.5V20H26.25V22.5H3.75ZM3.75 16.25V13.75H26.25V16.25H3.75ZM3.75 10V7.5H26.25V10H3.75Z" fill="var(--Schemes-On-Surface, #1D1B20)"/>
-      </svg>
-    </div>
-    <div data-layer="MPV" class="Mpv" style="width: 417px; height: 34px; left: 6px; top: 111px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: var(--TEXT-ON-SPECS-ETC, #7F7F7F); font-size: 30px; font-family: Montserrat; font-weight: 600; word-wrap: break-word">   MPV   </div>
-    <div data-layer="--" style="width: 250px; height: 149px; left: 90px; top: 673px; position: absolute"></div>
-    <div data-layer="Rectangle 37" class="Rectangle37" style="width: 318px; height: 364px; left: 59px; top: 325px; position: absolute"></div>
-    <div data-svg-wrapper data-layer="ri-arrow-left-s-fill" class="RiArrowLeftSFill" style="left: 149px; top: 115px; position: absolute">
-      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <g clip-path="url(#clip0_832_1532)">
-      <circle cx="12" cy="12" r="12" fill="#D9D9D9"/>
-      <path d="M8 12L14 6V18L8 12Z" fill="black"/>
-      </g>
-      <defs>
-      <clipPath id="clip0_832_1532">
-      <rect width="24" height="24" fill="white"/>
-      </clipPath>
-      </defs>
-      </svg>
-    </div>
-    <div data-svg-wrapper data-layer="ri-arrow-left-s-fill" class="RiArrowLeftSFill" style="left: 277px; top: 115px; position: absolute">
-      <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <g clip-path="url(#clip0_832_1537)">
-      <circle cx="12.0483" cy="12.0485" r="12" transform="rotate(179.769 12.0483 12.0485)" fill="#D9D9D9"/>
-      <path d="M16.0485 12.0323L10.0728 18.0564L10.0244 6.05655L16.0485 12.0323Z" fill="black"/>
-      </g>
-      <defs>
-      <clipPath id="clip0_832_1537">
-      <rect width="24" height="24" fill="white" transform="translate(24.0967 24) rotate(179.769)"/>
-      </clipPath>
-      </defs>
-      </svg>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MPV - AutoHub</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" defer></script>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      max-width: 430px;
+      margin: 0 auto;
+      font-family: 'Montserrat', sans-serif;
+    }
+  </style>
+</head>
+<body class="min-h-screen bg-white text-gray-800 flex flex-col">
+
+<!-- Header -->
+<div class="flex justify-between items-center px-4 py-4">
+  <button id="sidebarToggle" aria-label="Menu">
+    <i class="fas fa-bars text-xl"></i>
+  </button>
+  <div class="flex gap-4">
+    <i class="fas fa-user-circle text-xl"></i>
+    <i class="fas fa-search text-xl"></i>
+  </div>
+</div>
+
+<!-- MPV Title with Arrows -->
+<div class="flex items-center justify-center mt-4 mb-4 space-x-4">
+  <!-- Previous to SUV -->
+  <a href="SUV.html" class="w-8 h-8 rounded-full bg-gray-300 flex items-center justify-center">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+    </svg>
+  </a>
+
+  <!-- MPV Title -->
+  <h1 class="text-2xl font-semibold text-gray-700 tracking-wide">MPV</h1>
+
+  <!-- Next to Hatchback -->
+  <a href="hatchback.html" class="w-8 h-8 rounded-full bg-gray-300 flex items-center justify-center">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+    </svg>
+  </a>
+</div>
+
+<!-- MPV Cards -->
+<main class="space-y-6 px-4">
+  <!-- Kia Carnival -->
+  <div class="bg-gray-200 rounded-xl shadow-md p-3 border border-black">
+    <img src="https://i.ibb.co/Lhn52s6p/Kia-Carnival-pic.png" class="w-full h-40 object-cover rounded-md mb-2" />
+    <h2 class="text-center font-bold text-lg">Kia Carnival</h2>
+    <div class="text-right">
+      <a href="#" class="text-blue-500 text-sm font-medium">More Details</a>
     </div>
   </div>
+
+  <!-- Hyundai H1 -->
+  <div class="bg-gray-200 rounded-xl shadow-md p-3 border border-black">
+    <img src="https://i.ibb.co/9HyB2ZkX/Hyundai-H1.png" class="w-full h-40 object-cover rounded-md mb-2" />
+    <h2 class="text-center font-bold text-lg">Hyundai H1</h2>
+    <div class="text-right">
+      <a href="#" class="text-blue-500 text-sm font-medium">More Details</a>
+    </div>
+  </div>
+
+  <!-- Toyota Alphard -->
+  <div class="bg-gray-200 rounded-xl shadow-md p-3 border border-black">
+    <img src="https://i.ibb.co/9H7GmNqP/Toyota-Alphard.png" class="w-full h-40 object-cover rounded-md mb-2" />
+    <h2 class="text-center font-bold text-lg">Toyota Alphard</h2>
+    <div class="text-right">
+      <a href="#" class="text-blue-500 text-sm font-medium">More Details</a>
+    </div>
+  </div>
+
+  <!-- Mazda MX-5 (Empty Box) -->
+  <div class="bg-gray-200 rounded-xl shadow-md p-3 border border-black h-[210px] flex flex-col justify-end">
+    <h2 class="text-center font-bold text-lg">Mazda MX-5</h2>
+    <div class="text-right">
+      <a href="#" class="text-blue-500 text-sm font-medium">More Details</a>
+    </div>
+  </div>
+</main>
+
+<!-- Footer (Empty Placeholder) -->
+<footer class="mt-auto py-6 text-center text-sm text-white bg-[#343434]">
+</footer>
+
+<!-- Sidebar -->
+<div id="overlay" class="fixed top-0 left-0 w-full h-full bg-black bg-opacity-40 backdrop-blur-sm z-40 hidden"></div>
+<div id="sidebar" class="fixed top-0 left-0 w-64 h-full bg-[#343434] text-white transform -translate-x-full transition-transform duration-300 ease-in-out z-50 p-6">
+  <button id="closeSidebar" class="text-white mb-4">
+    <i class="fas fa-arrow-left"></i>
+  </button>
+  <h1 class="text-2xl font-bold mb-6">AutoHub</h1>
+  <nav class="space-y-4">
+    <a href="home.html" class="block">HOME</a>
+    <a href="suv.html" class="block">SUV</a>
+    <a href="mpv.html" class="block">MPV</a>
+    <a href="hatchback.html" class="block">HATCHBACK</a>
+    <a href="sedan.html" class="block">SEDAN</a>
+    <a href="coupe.html" class="block">COUPE</a>
+    <a href="luxury.html" class="block">LUXURY</a>
+    <a href="sport.html" class="block">SPORT</a>
+  </nav>
+</div>
+
+<script>
+  const sidebar = document.getElementById('sidebar');
+  const sidebarToggle = document.getElementById('sidebarToggle');
+  const closeSidebar = document.getElementById('closeSidebar');
+  const overlay = document.getElementById('overlay');
+
+  function openSidebar() {
+    sidebar.classList.remove('-translate-x-full');
+    overlay.classList.remove('hidden');
+  }
+
+  function closeSidebarMenu() {
+    sidebar.classList.add('-translate-x-full');
+    overlay.classList.add('hidden');
+  }
+
+  sidebarToggle.addEventListener('click', openSidebar);
+  closeSidebar.addEventListener('click', closeSidebarMenu);
+  overlay.addEventListener('click', closeSidebarMenu);
+</script>
+
+</body>
+</html>
