--- a/pages/Hatchbackpage.html
+++ b/pages/Hatchbackpage.html
@@ -25,20 +25,20 @@
   <div class="ml-12 mt-12">
     <h1 class="text-3xl font-bold mb-10">AutoHub</h1>
     <nav class="space-y-6">
-      <a href="#" class="block text-white">HOME</a>
-      <a href="#" class="block text-white">SUV</a>
-      <a href="#" class="block text-white">MPV</a>
-      <a href="#" class="block text-white">HATCHBACK</a>
-      <a href="#" class="block text-white">SEDAN</a>
+      <a href="homepage.html" class="block text-white">HOME</a>
+      <a href="SUVpage.html" class="block text-white">SUV</a>
+      <a href="MPV.html" class="block text-white">MPV</a>
+      <a href="Hatchbackpage.html" class="block text-white">HATCHBACK</a>
+      <a href="sedan.html" class="block text-white">SEDAN</a>
       <a href="#" class="block text-white">COUPE</a>
       <a href="#" class="block text-white">LUXURY</a>
-      <a href="#" class="block text-white">SPORT</a>
+      <a href="Sportpage.html" class="block text-white">SPORT</a>
     </nav>
     <div class="space-y-4 mt-10">
-      <a href="#" class="flex items-center space-x-2">
+      <a href="AboutPage.html" class="flex items-center space-x-2">
         <i class="fas fa-info-circle"></i><span>About</span>
       </a>
-      <a href="#" class="flex items-center space-x-2">
+      <a href="login.html" class="flex items-center space-x-2">
         <i class="fas fa-sign-out-alt"></i><span>Log out</span>
       </a>
     </div>
