--- a/pages/SearchPage.html
+++ b/pages/SearchPage.html
@@ -108,34 +108,34 @@
 <body class="flex flex-col items-center justify-center h-screen bg-gradient-to-b from-white to-gray-200 fade-in">
 
     <!-- SIDEBAR -->
-<div id="sidebar" class="fixed top-0 left-0 w-64 h-full bg-[#343434] text-white transform -translate-x-full transition-transform duration-300 ease-in-out z-50 p-6">
-    <div class="absolute top-4 left-4">
-      <button id="closeSidebar" aria-label="Close" class="text-gray-400 hover:text-gray-200">
-        <i class="fas fa-arrow-left text-white"></i>
-      </button>
-    </div>
-    <div class="ml-12 mt-12">
-      <h1 class="text-3xl font-bold mb-10">AutoHub</h1>
-      <nav class="space-y-6">
-        <a href="#" class="block text-white">HOME</a>
-        <a href="#" class="block text-white">SUV</a>
-        <a href="#" class="block text-white">MPV</a>
-        <a href="#" class="block text-white">HATCHBACK</a>
-        <a href="#" class="block text-white">SEDAN</a>
-        <a href="#" class="block text-white">COUPE</a>
-        <a href="#" class="block text-white">LUXURY</a>
-        <a href="#" class="block text-white">SPORT</a>
-      </nav>
-      <div class="space-y-4 mt-10">
-        <a href="{% url 'about' %}" class="flex items-center space-x-2">
-          <i class="fas fa-info-circle"></i><span>About</span>
-        </a>
-        <a href="#" class="flex items-center space-x-2">
-          <i class="fas fa-sign-out-alt"></i><span>Log out</span>
-        </a>
+    <div id="sidebar" class="fixed top-0 left-0 w-64 h-full bg-[#343434] text-white transform -translate-x-full transition-transform duration-300 ease-in-out z-50 p-6">
+        <div class="absolute top-4 left-4">
+          <button id="closeSidebar" aria-label="Close" class="text-gray-400 hover:text-gray-200">
+            <i class="fas fa-arrow-left text-white"></i>
+          </button>
+        </div>
+        <div class="ml-12 mt-12">
+          <h1 class="text-3xl font-bold mb-10">AutoHub</h1>
+          <nav class="space-y-6">
+            <a href="homepage.html" class="block text-white">HOME</a>
+            <a href="SUVpage.html" class="block text-white">SUV</a>
+            <a href="MPV.html" class="block text-white">MPV</a>
+            <a href="Hatchbackpage.html" class="block text-white">HATCHBACK</a>
+            <a href="sedan.html" class="block text-white">SEDAN</a>
+            <a href="Coupe (Category).html" class="block text-white">COUPE</a>
+            <a href="Luxury (Category).html" class="block text-white">LUXURY</a>
+            <a href="Sportpage.html" class="block text-white">SPORT</a>
+          </nav>
+          <div class="space-y-4 mt-10">
+            <a href="AboutPage.html" class="flex items-center space-x-2">
+              <i class="fas fa-info-circle"></i><span>About</span>
+            </a>
+            <a href="login.html" class="flex items-center space-x-2">
+              <i class="fas fa-sign-out-alt"></i><span>Log out</span>
+            </a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
   
     <!-- Three-line icon linked to Category page -->
 
