--- a/pages/ViewAllCars.html
+++ b/pages/ViewAllCars.html
@@ -6,6 +6,7 @@
   <title>AutoHub</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400&family=Montserrat:wght@300&family=Poppins:wght@700&family=Raleway&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
     body {
       max-width: 430px;
@@ -16,22 +17,60 @@
       font-family: 'Exo 2', sans-serif;
       font-size: 24px;
     }
+    .blur-dark {
+      filter: blur(5px) brightness(0.7);
+      transition: all 0.3s ease-in-out;
+    }
   </style>
 </head>
+<body class="font-sans relative">
 
-<body class="font-sans">
-
-  <!-- Header Section -->
-  <div class="relative">
-    <div class="absolute top-2 left-2">
-      <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-      </svg>
+  <!-- Sidebar -->
+  <div id="sidebar" class="fixed top-0 left-0 w-64 h-full bg-[#343434] text-white transform -translate-x-full transition-transform duration-300 ease-in-out z-50 p-6">
+    <div class="absolute top-4 left-4">
+      <button id="closeSidebar" aria-label="Close" class="text-gray-400 hover:text-gray-200">
+        <i class="fas fa-arrow-left text-white"></i>
+      </button>
     </div>
+    <div class="ml-12 mt-12">
+      <h1 class="text-3xl font-bold mb-10">AutoHub</h1>
+      <nav class="space-y-6">
+        <a href="homepage.html" class="block text-white">HOME</a>
+        <a href="SUVpage.html" class="block text-white">SUV</a>
+        <a href="MPV.html" class="block text-white">MPV</a>
+        <a href="Hatchbackpage.html" class="block text-white">HATCHBACK</a>
+        <a href="sedan.html" class="block text-white">SEDAN</a>
+        <a href="Coupe (Category).html" class="block text-white">COUPE</a>
+        <a href="Luxury (Category).html" class="block text-white">LUXURY</a>
+        <a href="Sportpage.html" class="block text-white">SPORT</a>
+      </nav>
+      <div class="space-y-4 mt-10">
+        <a href="AboutPage.html" class="flex items-center space-x-2">
+          <i class="fas fa-info-circle"></i><span>About</span>
+        </a>
+        <a href="login.html" class="flex items-center space-x-2">
+          <i class="fas fa-sign-out-alt"></i><span>Log out</span>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div id="contentWrapper">
+  <!-- Main Content -->
+  <div id="mainContent" class="relative z-10">
+    <!-- Header -->
+    <div class="absolute top-2 left-2 z-50">
+      <button id="sidebarToggle" aria-label="Menu">
+        <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+        </svg>
+      </button>
+    </div>
+
     <div class="absolute top-10 left-3 flex items-center space-x-1">
       <img src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Flag_of_Brunei.svg" alt="Brunei Flag" class="w-4 h-3">
       <span class="text-white text-sm">BND</span>
     </div>
+
     <img src="https://media.ed.edmunds-media.com/volkswagen/golf-gti/2024/oem/2024_volkswagen_golf-gti_4dr-hatchback_380-autobahn_fq_oem_1_1600.jpg" 
          alt="Volkswagen Golf GTI" 
          class="w-full h-[230px] object-cover">
@@ -42,9 +81,9 @@
   </div>
 
   <!-- Filter + Search -->
-  <div class="px-4 pt-4">
+  <div class="px-4 pt-4 z-10 relative">
     <div class="flex justify-end mb-2">
-      <button class="flex items-center gap-1 bg-[#d9d9d9] rounded-full px-4 py-1 shadow text-sm" style="font-family: 'Poppins', sans-serif; font-weight: 700;">
+      <button id="openSearch" class="flex items-center gap-1 bg-[#d9d9d9] rounded-full px-4 py-1 shadow text-sm" style="font-family: 'Poppins', sans-serif; font-weight: 700;">
         <img src="https://static.vecteezy.com/system/resources/thumbnails/012/174/332/small/simple-magnifying-icon-png.png" alt="Search" class="w-4 h-4"> SEARCH
       </button>
     </div>
@@ -60,10 +99,9 @@
     </div>
   </div>
 
-  <!-- Car Grid (Vertical scroll) -->
-  <div class="px-4 py-6">
+  <!-- Car Grid -->
+  <div class="px-4 py-6 relative z-10">
     <div class="grid grid-cols-2 gap-4">
-      <!-- Car Cards with proper Raleway font -->
       <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
         <img src="https://newtpm.s3-ap-southeast-1.amazonaws.com/vehicles/colors/img_32_1104_attitude_black_mica.png" class="h-24 mx-auto object-contain" />
         <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Toyota Fortuner</p>
@@ -98,11 +136,118 @@
       </div>
     </div>
 
-    <!-- Back to Main -->
     <div class="text-right mt-6">
-      <a href="index.html" class="text-xs text-blue-600 font-semibold">Back to Main</a>
+      <a href="{% url 'homepage' %}" class="text-xs text-blue-600 font-semibold">Back to Home</a>
     </div>
   </div>
+
+  
+
+ <!-- Search Modal -->
+<div id="searchModal" class="fixed top-0 left-0 w-full h-full bg-black bg-opacity-50 backdrop-blur-sm flex items-center justify-center hidden z-50">
+  <div class="bg-white p-6 rounded-lg w-80 max-w-full shadow-lg relative">
+    
+    <!-- Search Input with Icons -->
+    <div class="relative mb-4">
+      <input 
+        type="text" 
+        id="searchInput" 
+        placeholder="Search" 
+        class="w-full rounded-full pl-10 pr-10 py-2 text-sm text-gray-700 bg-white border border-gray-300 placeholder-gray-400 focus:outline-none shadow" 
+        style="font-family: 'Raleway', sans-serif;"
+      />
+
+      <!-- Search icon on the left -->
+      <div class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400 pointer-events-none">
+        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M10 18a8 8 0 100-16 8 8 0 000 16z" />
+        </svg>
+      </div>
+
+      <!-- Clickable Close icon inside input -->
+      <button 
+        id="closeSearch" 
+        type="button"
+        class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-gray-600"
+        aria-label="Close Search"
+      >
+        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+        </svg>
+      </button>
+    </div>
+
+    <!-- Search Results -->
+    <div id="searchResults" class="flex flex-col divide-y divide-gray-300 text-gray-700 text-sm" style="font-family: 'Raleway', sans-serif;">
+      <!-- Dynamic Search Results -->
+    </div>
+
+  </div>
+</div>
+</div>
+<!-- Sidebar Script -->
+<script>
+  const sidebar = document.getElementById('sidebar');
+  const mainContent = document.getElementById('contentWrapper');
+  const sidebarToggle = document.getElementById('sidebarToggle');
+  const closeSidebar = document.getElementById('closeSidebar');
+
+  sidebarToggle.addEventListener('click', () => {
+    sidebar.classList.toggle('-translate-x-full');
+    mainContent.classList.add('blur-dark');
+  });
+
+  closeSidebar.addEventListener('click', () => {
+    sidebar.classList.add('-translate-x-full');
+    mainContent.classList.remove('blur-dark');
+  });
+</script>
+
+  <!-- Search Script -->
+  <script>
+    const searchModal = document.getElementById("searchModal");
+    const openSearch = document.getElementById("openSearch");
+    const closeSearch = document.getElementById("closeSearch");
+    const searchInput = document.getElementById("searchInput");
+    const searchResults = document.getElementById("searchResults");
+
+    const cars = [
+      "Hyundai H1", "Hyundai Elantra", "Hyundai i30 N", "Hyundai Kona", "Hyundai Stargazer",
+      "Kia K5", "Kia Cerato", "Kia Sportage", "Kia Carnival", "Kia Seltos",
+      "Toyota Raize", "Toyota Fortuner", "Toyota GR86", "Toyota Vios", "Toyota Yaris"
+    ];
+
+    openSearch.addEventListener("click", () => {
+      searchModal.classList.remove("hidden");
+      document.body.style.overflow = "hidden";
+      searchInput.focus();
+    });
+
+    closeSearch.addEventListener("click", () => {
+      searchModal.classList.add("hidden");
+      document.body.style.overflow = "";
+    });
+
+    searchModal.addEventListener("click", (e) => {
+      if (e.target === searchModal) {
+        searchModal.classList.add("hidden");
+        document.body.style.overflow = "";
+      }
+    });
+
+    searchInput.addEventListener("input", (e) => {
+      const query = e.target.value.toLowerCase();
+      searchResults.innerHTML = "";
+      if (query.trim() === "") return;
+      const filtered = cars.filter(car => car.toLowerCase().includes(query));
+      filtered.forEach(car => {
+        const div = document.createElement("div");
+        div.textContent = car;
+        div.classList.add("px-2", "py-2", "hover:bg-gray-100", "cursor-pointer");
+        searchResults.appendChild(div);
+      });
+    });
+  </script>
 
 </body>
 </html>
