edited index file for Navigation

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -41,7 +41,7 @@
       <a href="MPV.html" class="block text-white">MPV</a>
       <a href="Hatchbackpage.html" class="block text-white">HATCHBACK</a>
       <a href="sedan.html" class="block text-white">SEDAN</a>
-      <a href="Coupe (Category).html" class="block text-white">COUPE</a>
+      <a href="C" class="block text-white">COUPE</a>
       <a href="Luxury (Category).html" class="block text-white">LUXURY</a>
       <a href="Sportpage.html" class="block text-white">SPORT</a>
     </nav>
