updated forget password in login page

--- a/pages/login.html
+++ b/pages/login.html
@@ -67,7 +67,7 @@
       <!-- Links -->
       <div class="flex justify-between mt-4 text-sm font-normal text-black">
         <a href="#">CREATE ACCOUNT</a>
-        <a href="#">FORGOT PASSWORD</a>
+        <a href="forgetpassword.html">FORGOT PASSWORD</a>
       </div>
     </div>
   </body>
